@@ -1,3 +1,6 @@
+17:
+- Add priority setting
+
 16:
 - Rebuild
 
